--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -504,6 +504,11 @@ a {
     color: #ffffff;
     border-radius: 12px;
     border: none;
+    font-weight: 400;
+}
+
+.input-box img {
+    width: 22px;
 }
 
 .input-box label {
@@ -949,6 +954,7 @@ input:checked + .slider:before {
     gap: 6px;
     max-width: 48px;
     margin: 0 12px;
+    position: relative;
 }
 
 .button-box button {
@@ -1002,6 +1008,9 @@ input:checked + .slider:before {
     transition: all 0.3s ease-in-out;
     background: #2c2c39;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* border: var(--border); */
     /* box-shadow: var(--box-shadow); */
 }
@@ -1082,6 +1091,60 @@ input:checked + .slider:before {
     .button-box i {
         font-size: 15px;
         max-width: 18px;
+    }
+}
+
+.control-more-button .vertical-select-popup {
+    bottom: 125px;
+    width: 250px;
+}
+
+.vertical-select-popup.show-popup {
+    visibility: visible;
+    opacity: 1;
+}
+
+.circle-rec-box {
+    width: 32px;
+    height: 32px;
+    padding: 10px;
+    position: relative;
+}
+
+.circle-rec-box::after {
+    content: '';
+    width: 17px;
+    height: 17px;
+    border: 1.5px solid white;
+    border-radius: 50%;
+    position: absolute;
+    left: 6px;
+    top: 6px;
+}
+
+.circle-rec {
+    background: white;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    animation: recAnimation 2.5s ease-in-out infinite;
+}
+
+@keyframes recAnimation {
+    0% {
+        background: #e63b2a;
+    }
+    25% {
+        background: #9c3530;
+    }
+    50% {
+        background: #512f36;
+    }
+    25% {
+        background: #9c3530;
+    }
+    100% {
+        background: #e63b2a;
     }
 }
 
@@ -1696,7 +1759,7 @@ select {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .show {
@@ -2014,10 +2077,14 @@ progress {
     position: relative;
     width: 100%;
     height: var(--msger-height);
-    background: var(--wb-bg);
+    background: #141418;
     top: 0;
     left: 0;
     overflow: hidden;
+    background-image: repeating-linear-gradient(to right, #2c2c39, #2c2c39 1px, transparent 1px, transparent 150px),
+        repeating-linear-gradient(to bottom, #2c2c39, #2c2c39 1px, transparent 1px, transparent 150px);
+    background-size: 150px 150px;
+    box-shadow: 0px 0px 0px 1px #141418 inset;
 }
 
 .whiteboard-options-box {
@@ -2074,8 +2141,6 @@ progress {
 
 .vertical-select-popup {
     position: absolute;
-    right: -215px;
-    top: 0;
     border-radius: 12px;
     background: var(--secondary-bg);
     overflow: hidden;
@@ -2083,6 +2148,11 @@ progress {
     opacity: 0;
     visibility: hidden;
     transition: 0.3s;
+}
+
+#whiteboard .vertical-select-popup {
+    right: -215px;
+    top: 0;
 }
 
 .vertical-select-item {
@@ -2094,6 +2164,7 @@ progress {
     color: #ffffff;
     transition: background-color 0.3s;
     border-radius: 12px;
+    cursor: pointer;
 }
 
 .vertical-select-item:hover,
