--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -97,6 +97,10 @@
     justify-content: center;
 }
 
+.Camera p {
+    display: none;
+}
+
 /* .Camera:hover {
     border: 3px solid rgb(113, 157, 239);
 } */
