--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -501,7 +501,36 @@ a {
     display: flex;
     flex-direction: column;
     gap: 3px;
+    transition: height 0.3s ease-in-out;
 }
+
+.members-screens.minify {
+    height: 64px;
+}
+
+.minify .members-screens-header img {
+    transform: rotate(180deg);
+}
+
+.members-microphone {
+    position: absolute;
+    left: 6px;
+    bottom: 6px;
+    width: 32px;
+    height: 32px;
+    background: #0d0e10;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+}
+
+.members-microphone i {
+    color: var(--main-color);
+    font-size: 14px;
+}
+
 .members-screens-header {
     display: flex;
     justify-content: space-between;
@@ -516,7 +545,9 @@ a {
     letter-spacing: -0.02em;
     color: #f8f8f8;
 }
-.members-buttons-box {
+
+.members-screens-header img {
+    transition: transform 0.3s ease-in-out;
 }
 
 .members-screen {
@@ -1159,14 +1190,21 @@ input:checked + .slider:before {
     }
 }
 
-.control-more-button .vertical-select-popup {
-    bottom: 125px;
+.button-box .vertical-select-popup {
+    bottom: 117px;
     width: 250px;
 }
 
 .vertical-select-popup.show-popup {
     visibility: visible;
     opacity: 1;
+    bottom: 125px;
+}
+
+@media (max-width: 768px) {
+    .vertical-select-popup.show-popup {
+        bottom: 55px;
+    }
 }
 
 .circle-rec-box {
@@ -1389,6 +1427,33 @@ input:checked + .slider:before {
     border-right: 2px solid var(--control-bg);
 }
 
+@media (max-width: 768px) {
+    #chatRoom {
+        min-width: 100%;
+        border-right: none;
+    }
+
+    .chat-content,
+    .chat-msger-wrapper {
+        max-width: none !important;
+        padding-right: 8px;
+    }
+
+    #chatMessage {
+        height: 56px;
+        overflow: hidden;
+        max-height: 56px;
+    }
+
+    .chat-content {
+        height: 96px;
+    }
+
+    #membersScreens {
+        display: none;
+    }
+}
+
 .msger {
     width: 100%;
     height: 100%;
@@ -1441,7 +1506,6 @@ input:checked + .slider:before {
 --------------------------------------------------------------*/
 
 .chat-content {
-    /* padding: 24px; */
     max-width: 355px;
 }
 
@@ -1691,8 +1755,23 @@ input:checked + .slider:before {
     right: 8px;
     z-index: 1;
     border-radius: 6px;
-
     background: var(--control-bg);
+}
+
+@media (max-width: 768px) {
+    .chat-msger-controls,
+    .chat-msger-controls::after {
+        width: 90%;
+    }
+
+    #chatRoom {
+        height: 100vh;
+        z-index: 9;
+    }
+
+    .chat-msger-wrapper {
+        height: 56px;
+    }
 }
 
 .chat-msger-controls button {
@@ -1885,6 +1964,16 @@ button:hover {
     min-width: var(--msger-width);
     height: var(--msger-height);
     border-right: 2px solid var(--control-bg);
+}
+
+@media (max-width: 768px) {
+    #participants {
+        display: none;
+    }
+
+    .invite-popup {
+        max-width: none;
+    }
 }
 
 #roomParticipants,
@@ -2220,6 +2309,7 @@ progress {
     opacity: 0;
     visibility: hidden;
     transition: 0.3s;
+    z-index: 9999;
 }
 
 #whiteboard .vertical-select-popup {
@@ -2237,11 +2327,27 @@ progress {
     transition: background-color 0.3s;
     border-radius: 12px;
     cursor: pointer;
+    position: relative;
+}
+
+.vertical-select-item:not(.vertical-select-item:last-child)::after {
+    content: '';
+    width: 90%;
+    height: 2px;
+    background: #2c2c39;
+    position: absolute;
+    bottom: -1px;
+    left: 5%;
 }
 
 .vertical-select-item:hover,
 .horizontal-select-popup > div:hover {
     background: #2c2c39;
+}
+
+.vertical-select-item:active,
+.horizontal-select-popup > div:active {
+    background: #3b3b48;
 }
 
 .vertical-select-item span {
